Added media files

--- a/language/en-GB/en-GB.mod_dd_gmaps_module.sys.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.sys.ini
@@ -21,6 +21,8 @@ MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_LABEL="Set as default position"
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_DESC="The detault position of the map"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_LABEL="Location name"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_DESC="The name of the location."
+MOD_DD_GMAPS_MODULE_LOCATION_IMAGE_LABEL="Location image"
+MOD_DD_GMAPS_MODULE_LOCATION_IMAGE_DESC="A image for the location (Google maps info box)"
 MOD_DD_GMAPS_MODULE_STREET_LABEL="Street"
 MOD_DD_GMAPS_MODULE_STREET_DESC="A street and house number for the location entry. Note, required for geocoding to place marker on the map of map module."
 MOD_DD_GMAPS_MODULE_LOCATION_LABEL="Location"
