--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -8,12 +8,14 @@ MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="A Joomla! module to display Google Maps. Ad
 
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom level"
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="The Zooma level of the map. A range beetween 1 and 10."
-MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL=""
-MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC=""
-MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Width"
+MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Force Size"
+MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC="If the size does not fit to the module, this can be forced here."
+MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Force Width"
 MOD_DD_GMAPS_MODULE_WIDTH_DESC="The width of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
-MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Height"
+MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Force Height"
 MOD_DD_GMAPS_MODULE_HEIGHT_DESC="The height of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
+MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize"
+MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button".
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default address"
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates is a simple save required."
