--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -4,7 +4,7 @@
 ; @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
 
 MOD_DD_GMAPS_MODULE="DD GMaps Module"
-MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="A Joomla! module to display Google Maps. Addon Module for DD Gmaps Locations https://github.com/hr-it-solutions/DD_J_com_gmaps_locations. Module can also be used as stand alone module."
+MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="A Joomla! module to display Google Maps. Addon Module for DD Gmaps Locations. Module can also be used as stand alone module."
 
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom level"
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="The Zooma level of the map. A range beetween 1 and 10."
@@ -14,7 +14,7 @@ MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Force Width"
 MOD_DD_GMAPS_MODULE_WIDTH_DESC="The width of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
 MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Force Height"
 MOD_DD_GMAPS_MODULE_HEIGHT_DESC="The height of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
-MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize"
+MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button".
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default address"
