--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -18,7 +18,7 @@ MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button".
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default address"
-MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates is a simple save required."
+MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates, save and visit the frontend."
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_LABEL="Set as default position"
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_DESC="The detault position of the map"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_LABEL="Location name"
@@ -38,9 +38,9 @@ MOD_DD_GMAPS_MODULE_FEDERALSTATE_LABEL="Federal state"
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_DESC="A federal state for the location entry."
 
 MOD_DD_GMAPS_MODULE_LATITUDE_LABEL="Latitude"
-MOD_DD_GMAPS_MODULE_LATITUDE_DESC="The coordinates (latitude) from geocoding Google API, filled after saving. Coordinates can not be edited."
+MOD_DD_GMAPS_MODULE_LATITUDE_DESC="The coordinates (latitude) from geocoding Google API, filled after first view. Coordinates can not be edited."
 MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Longitude"
-MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding Google API, filled after saving. Coordinates can not be edited."
+MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding Google API, filled after first view. Coordinates can not be edited."
 
 
 MOD_DD_GMAPS_MODULE_API_SETTINGS_LABEL="Google API Settings"
