Fixed language keys wrong namespaces

--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -42,6 +42,7 @@ MOD_DD_GMAPS_MODULE_LATITUDE_DESC="The coordinates (latitude) from geocoding Goo
 MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Longitude"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding Google API, filled after first view. Coordinates can not be edited."
 
+MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
 
 MOD_DD_GMAPS_MODULE_API_SETTINGS_LABEL="Google API Settings"
 MOD_DD_GMAPS_MODULE_API_SETTINGS_DESC="Please enter your Google API Keys https://console.developers.google.com/apis/library"
@@ -50,23 +51,27 @@ MOD_DD_GMAPS_MODULE_API_KEY_JS_PLACES_DESC="Google Places API Key for JS Places 
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_LABEL="Google Geocode API Key"
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_DESC="Google Geocode API Key for Geocode API"
 
-MOD_DD_GMAPS_MARKER_SETTINGS_LABEL="Marker"
-MOD_DD_GMAPS_MARKER_SETTINGS_DESC="Marker settings"
-MOD_DD_GMAPS_MARKER_IMAGE_LABEL="Marker image"
-MOD_DD_GMAPS_MARKER_IMAGE_DESC="Marker image (max. size 50px to 50px)"
-MOD_DD_GMAPS_CLUSTERMARKER_IMAGE_LABEL="Cluster marker image"
-MOD_DD_GMAPS_CLUSTERMARKER_IMAGE_DESC="Cluster marker image (max. size 55px to 55px)"
+MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_LABEL="Marker"
+MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker settings"
+MOD_DD_GMAPS_MODULE_MARKER_IMAGE_LABEL="Marker image"
+MOD_DD_GMAPS_MODULE_MARKER_IMAGE_DESC="Marker image (max. size 50px to 50px)"
+MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_LABEL="Cluster marker image"
+MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster marker image (max. size 55px to 55px)"
 
-MOD_DD_GMAPS_DESIGN_SETTINGS_LABEL="Design"
-MOD_DD_GMAPS_DESIGN_SETTINGS_DESC="Design settings"
-MOD_DD_GMAPS_POPUPBAR_COLOR_LABEL="PopUp bar color"
-MOD_DD_GMAPS_POPUPBAR_COLOR_DESC="The color of the popup bar (Google maps info box)"
-MOD_DD_GMAPS_TITLETEXT_COLOR_LABEL="Title test color"
-MOD_DD_GMAPS_TITLETEXT_COLOR_DESC="The color of the location address title (Google maps info box)"
-MOD_DD_GMAPS_CLOSING_IMAGE_COLOR_LABEL="Closing x color"
-MOD_DD_GMAPS_CLOSING_IMAGE_COLOR_DESC=""
-MOD_DD_GMAPS_CLOSING_IMAGE_BRIGHT_MODE="Bright Mode"
-MOD_DD_GMAPS_CLOSING_IMAGE_DARK_MODE="Dark Mode"
+MOD_DD_GMAPS_MODULE_DESIGN_SETTINGS_LABEL="Design"
+MOD_DD_GMAPS_MODULE_DESIGN_SETTINGS_DESC="Design settings"
+MOD_DD_GMAPS_MODULE_POPUPBAR_COLOR_LABEL="PopUp bar color"
+MOD_DD_GMAPS_MODULE_POPUPBAR_COLOR_DESC="The color of the popup bar (Google maps info box)"
+MOD_DD_GMAPS_MODULE_TITLETEXT_COLOR_LABEL="Title test color"
+MOD_DD_GMAPS_MODULE_TITLETEXT_COLOR_DESC="The color of the location address title (Google maps info box)"
+MOD_DD_GMAPS_MODULE_CLOSING_IMAGE_COLOR_LABEL="Closing x color"
+MOD_DD_GMAPS_MODULE_CLOSING_IMAGE_COLOR_DESC=""
+MOD_DD_GMAPS_MODULE_CLOSING_IMAGE_BRIGHT_MODE="Bright Mode"
+MOD_DD_GMAPS_MODULE_CLOSING_IMAGE_DARK_MODE="Dark Mode"
+
+MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Your location"
+MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Latitude"
+MOD_DD_GMAPS_MODULE_YOUR_LONGITUDE="Longitude"
 
 ; @copyright (C) 2015 Rainer Schlötterer Country Name Translation
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AFGHANISTAN="Afghanistan"
