Translated to German

--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -15,10 +15,10 @@ MOD_DD_GMAPS_MODULE_WIDTH_DESC="The width of the map in px. e.g. "_QQ_"400"_QQ_"
 MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Force Height"
 MOD_DD_GMAPS_MODULE_HEIGHT_DESC="The height of the map in px. e.g. "_QQ_"400"_QQ_". Please enter without px!"
 MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize button"
-MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button".
+MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button"
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default address"
-MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates, save and visit the frontend."
+MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates, save the address."
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_LABEL="Set as default position"
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_DESC="The detault position of the map"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_LABEL="Location name"
