--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -42,6 +42,8 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Die Koordinaten (Längengrad) für die GeoCo
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
 
+MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="Das System-Plugin (DD GMaps Locations GeoCode) muss für die Geokodierung aktiviert sein!"
+
 MOD_DD_GMAPS_MODULE_API_SETTINGS_LABEL="Google API Einstellungen"
 MOD_DD_GMAPS_MODULE_API_SETTINGS_DESC="Bitte geben Sie Ihre Google API Keys (Schlüssel) ein https://console.developers.google.com/apis/library"
 MOD_DD_GMAPS_MODULE_API_KEY_JS_PLACES_LABEL="Google Places API Key"
