--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -52,6 +52,8 @@ MOD_DD_GMAPS_MODULE_API_KEY_JS_PLACES_DESC="Google Places API Key (Schlüssel) f
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_LABEL="Google Geocode API Key"
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_DESC="Google Geocode API Key (Schlüssel) für Geocode API"
 
+MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS="Die Standortbestimmung ist fehlgeschlagen! Bitte überprüfen Sie die "_QQ_"GEO Addresse"__QQ" (Standort Adress-Daten). Meist liegt dies an falschen Adress-Informationen wie (Straße, PLZ, Ort, Land)."
+
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_LABEL="Marker"
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker Einstellungen"
 MOD_DD_GMAPS_MODULE_MARKER_IMAGE_LABEL="Marker Bild"
