--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -52,6 +52,8 @@ MOD_DD_GMAPS_MODULE_API_KEY_JS_PLACES_DESC="Google Places API Key for JS Places 
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_LABEL="Google Geocode API Key"
 MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_DESC="Google Geocode API Key for Geocode API"
 
+MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" data. Mostly this is due to incorrect address information, such as (street,  zip, location, country)."
+
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_LABEL="Marker"
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker settings"
 MOD_DD_GMAPS_MODULE_MARKER_IMAGE_LABEL="Marker image"
