New legal notes / copyright header Country Name Translation by Rainer Schlötterer

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -1,5 +1,6 @@
-; @version    1-1-0-0 // Y-m-d 2017-04-06
-; @author     HR IT-Solutions Florian Häusler https://www.hr-it-solutions.com
+; @package    DD_GMaps_Module
+;
+; @author     HR IT-Solutions Florian Häusler <info@hr-it-solutions.com>
 ; @copyright  Copyright (C) 2011 - 2017 Didldu e.K. | HR IT-Solutions
 ; @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
 
@@ -92,9 +93,9 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ARMENIA="Armenia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AM="AM"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ARUBA="Aruba"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AW="AW"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AUSTRALIA="Australia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AUSTRALIA="Australien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AU="AU"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AUSTRIA="Austria"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AUSTRIA="Österreich"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AT="AT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AZERBAIJAN="Azerbaijan"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AZ="AZ"
@@ -108,7 +109,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BARBADOS="Barbados"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BB="BB"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BELARUS="Belarus"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BY="BY"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BELGIUM="Belgium"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BELGIUM="Belgien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BE="BE"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BELIZE="Belize"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BZ="BZ"
@@ -120,7 +121,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BHUTAN="Bhutan"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BT="BT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BOLIVIAPLURINATIONALSTATEOF="Bolivia, PLURINATIONAL STATE OF"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BO="BO"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BOSNIAANDHERZEGOVINA="Bosnia And Herzegovina"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BOSNIAANDHERZEGOVINA="Bosnien und Herzegowina"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BA="BA"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BOTSWANA="Botswana"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BW="BW"
@@ -132,7 +133,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BRITISHINDIANOCEANTERRITORY="British Indian Oce
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IO="IO"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BRUNEIDARUSSALAM="Brunei Darussalam"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BN="BN"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BULGARIA="Bulgaria"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BULGARIA="Bulgarien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BG="BG"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_BURKINAFASO="Burkina Faso"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_BF="BF"
@@ -142,7 +143,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CAMBODIA="Cambodia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KH="KH"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CAMEROON="Cameroon"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CM="CM"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CANADA="Canada"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CANADA="Kanada"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CA="CA"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CAPEVERDE="Cape Verde"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CV="CV"
@@ -174,15 +175,15 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COSTARICA="Costa Rica"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CR="CR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CTEDIVOIRE="CÃ”te D'Ivoire"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CI="CI"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CROATIA="Croatia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CROATIA="Kroatien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_HR="HR"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CUBA="Cuba"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CUBA="Kuba"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CU="CU"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CYPRUS="Cyprus"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CYPRUS="Zypern"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CY="CY"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CZECHREPUBLIC="Czech Republic"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CZECHREPUBLIC="Tschechische Republik"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CZ="CZ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_DENMARK="Denmark"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_DENMARK="Dänemark"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_DK="DK"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_DJIBOUTI="Djibouti"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_DJ="DJ"
@@ -200,7 +201,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_EQUATORIALGUINEA="Equatorial Guinea"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GQ="GQ"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ERITREA="Eritrea"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_ER="ER"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ESTONIA="Estonia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ESTONIA="Estland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_EE="EE"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ETHIOPIA="Ethiopia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_ET="ET"
@@ -210,9 +211,9 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FAROEISLANDS="Faroe Islands"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_FO="FO"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FIJI="Fiji"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_FJ="FJ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FINLAND="Finland"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FINLAND="Finnland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_FI="FI"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FRANCE="France"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FRANCE="Frankreich"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_FR="FR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_FRENCHGUIANA="French Guiana"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GF="GF"
@@ -226,15 +227,15 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GAMBIA="Gambia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GM="GM"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GEORGIA="Georgia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GE="GE"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GERMANY="Germany"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GERMANY="Deutschland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_DE="DE"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GHANA="Ghana"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GH="GH"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GIBRALTAR="Gibraltar"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GI="GI"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GREECE="Greece"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GREECE="Griechenland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GR="GR"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GREENLAND="Greenland"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GREENLAND="Grönland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GL="GL"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_GRENADA="Grenada"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GD="GD"
@@ -262,11 +263,11 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_HONDURAS="Honduras"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_HN="HN"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_HONGKONG="Hong Kong"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_HK="HK"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_HUNGARY="Hungary"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_HUNGARY="Ungarn"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_HU="HU"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ICELAND="Iceland"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ICELAND="Island"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IS="IS"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_INDIA="India"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_INDIA="Indien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IN="IN"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_INDONESIA="Indonesia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_ID="ID"
@@ -274,13 +275,13 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_IRANISLAMICREPUBLICOF="Iran, Islamic Republic O
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IR="IR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_IRAQ="Iraq"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IQ="IQ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_IRELAND="Ireland"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_IRELAND="Irland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IE="IE"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ISLEOFMAN="Isle Of Man"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IM="IM"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ISRAEL="Israel"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IL="IL"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ITALY="Italy"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ITALY="Italien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IT="IT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_JAMAICA="Jamaica"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_JM="JM"
@@ -306,7 +307,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_KYRGYZSTAN="Kyrgyzstan"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KG="KG"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LAOPEOPLESDEMOCRATICREPUBLIC="Lao People's Democratic Republic"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LA="LA"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LATVIA="Latvia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LATVIA="Lettland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LV="LV"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LEBANON="Lebanon"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LB="LB"
@@ -318,13 +319,13 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LIBYANARABJAMAHIRIYA="Libyan Arab Jamahiriya"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LY="LY"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LIECHTENSTEIN="Liechtenstein"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LI="LI"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LITHUANIA="Lithuania"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LITHUANIA="Litauen"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LT="LT"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LUXEMBOURG="Luxembourg"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_LUXEMBOURG="Luxemburg"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LU="LU"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MACAO="Macao"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MO="MO"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MACEDONIATHEFORMERYUGOSLAVREPUBLICOF="Macedonia, The Former Yugoslav Republic Of"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MACEDONIATHEFORMERYUGOSLAVREPUBLICOF="Mazedonien, Die ehemalige jugoslawische Republik"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MK="MK"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_MADAGASCAR="Madagascar"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MG="MG"
@@ -374,13 +375,13 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NAURU="Nauru"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NR="NR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NEPAL="Nepal"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NP="NP"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NETHERLANDS="Netherlands"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NETHERLANDS="Niederlande"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NL="NL"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NETHERLANDSANTILLES="Netherlands Antilles"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AN="AN"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NEWCALEDONIA="New Caledonia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NC="NC"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NEWZEALAND="New Zealand"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NEWZEALAND="Neuseeland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NZ="NZ"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NICARAGUA="Nicaragua"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NI="NI"
@@ -394,7 +395,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NORFOLKISLAND="Norfolk Island"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NF="NF"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NORTHERNMARIANAISLANDS="Northern Mariana Islands"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_MP="MP"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NORWAY="Norway"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_NORWAY="Norwegen"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_NO="NO"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_OMAN="Oman"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_OM="OM"
@@ -416,7 +417,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_PHILIPPINES="Philippines"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_PH="PH"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_PITCAIRN="Pitcairn"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_PN="PN"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_POLAND="Poland"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_POLAND="Polen"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_PL="PL"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_PORTUGAL="Portugal"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_PT="PT"
@@ -426,9 +427,9 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_QATAR="Qatar"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_QA="QA"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_REUNION="Reunion"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_RE="RE"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ROMANIA="Romania"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ROMANIA="Rumänien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_RO="RO"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_RUSSIANFEDERATION="Russian Federation"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_RUSSIANFEDERATION="Russische Föderation"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_RU="RU"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_RWANDA="Rwanda"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_RW="RW"
@@ -456,7 +457,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SAUDIARABIA="Saudi Arabia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SA="SA"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SENEGAL="Senegal"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SN="SN"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SERBIA="Serbia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SERBIA="Serbien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_RS="RS"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SEYCHELLES="Seychelles"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SC="SC"
@@ -464,9 +465,9 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SIERRALEONE="Sierra Leone"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SL="SL"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SINGAPORE="Singapore"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SG="SG"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SLOVAKIA="Slovakia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SLOVAKIA="Slowakei"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SK="SK"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SLOVENIA="Slovenia"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SLOVENIA="Slowenien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SI="SI"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SOLOMONISLANDS="Solomon Islands"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SB="SB"
@@ -476,7 +477,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SOUTHAFRICA="South Africa"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_ZA="ZA"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SOUTHGEORGIAANDTHESOUTHSANDWICHISLANDS="South Georgia And The South Sandwich Islands"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GS="GS"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SPAIN="Spain"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SPAIN="Spanien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_ES="ES"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SRILANKA="Sri Lanka"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_LK="LK"
@@ -486,9 +487,9 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SURINAME="Suriname"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SR="SR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SVALBARDANDJANMAYEN="Svalbard And Jan Mayen"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SJ="SJ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWAZILAND="Swaziland"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWAZILAND="Schweiz"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SZ="SZ"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWEDEN="Sweden"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWEDEN="Schweden"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_SE="SE"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_SWITZERLAND="Switzerland"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CH="CH"
@@ -514,7 +515,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TRINIDADANDTOBAGO="Trinidad And Tobago"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TT="TT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TUNISIA="Tunisia"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TN="TN"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TURKEY="Turkey"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TURKEY="Türkei"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TR="TR"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_TURKMENISTAN="Turkmenistan"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_TM="TM"
@@ -528,9 +529,9 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UKRAINE="Ukraine"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_UA="UA"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UNITEDARABEMIRATES="United Arab Emirates"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_AE="AE"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UNITEDKINGDOM="United Kingdom"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UNITEDKINGDOM="Großbritannien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_GB="GB"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UNITEDSTATES="United States"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UNITEDSTATES="USA"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_US="US"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_UNITEDSTATESMINOROUTLYINGISLANDS="United States Minor Outlying Islands"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_UM="UM"
