--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -56,7 +56,7 @@ MOD_DD_GMAPS_MODULE_API_KEY_GEOCODE_DESC="Google Geocode API Key for Geocode API
 MOD_DD_GMAPS_MODULE_API_ALERT_GEOLOCATION_FAILED_ZERO_RESULTS="Geolocation failed! Please check the "_QQ_"GEO Address"_QQ_" data. Mostly this is due to incorrect address information, such as (street,  zip, location, country)."
 
 MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_LABEL="Marker"
-MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker settings"
+MOD_DD_GMAPS_MODULE_MARKER_SETTINGS_DESC="Marker settings (max. size 55px to 55px, see description of image fields.)"
 MOD_DD_GMAPS_MODULE_MARKER_IMAGE_LABEL="Marker image"
 MOD_DD_GMAPS_MODULE_MARKER_IMAGE_DESC="Marker image (max. size 50px to 50px)"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_LABEL="Cluster marker image"
