--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -17,7 +17,7 @@ MOD_DD_GMAPS_MODULE_HEIGHT_LABEL="Höhe erzwingen"
 MOD_DD_GMAPS_MODULE_HEIGHT_DESC="Die Höhe der Karte in px. z.B. "_QQ_" 400 "_QQ_". Bitte ohne px eingeben!"
 MOD_DD_GMAPS_MODULE_FULLSIZE="Vollbild Karte"
 MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Vollbild Button"
-MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="Zeigt eine Vollbild Button an"
+MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="Zeigt einen Vollbild Button an"
 
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Standardadresse"
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="Die Standardadresse der Karte bei der Anzeige als eigenständiges Modul. Dies ist auch erforderlich, wenn Sie eine Standardposition setzen möchten, z.B. Für DD GMaps Locations. Um die Koordinaten zu geocodieren, speichern Sie die Adresse."
