Addon Features > Language strings added

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -62,6 +62,14 @@ MOD_DD_GMAPS_MODULE_MARKER_IMAGE_DESC="Marker Bild (max. Größe 50px auf 50px)"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_LABEL="Cluster Marker Bild"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster Marker Bild (max. Größe 55px auf 55px)"
 
+MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Addon Funktionen"
+MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Erweiterte Erweiterung. DD GMaps Locations Komponente erforderlich."
+MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Addon Funktionen für DD GMaps Location</b>:"
+MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Erweiterte Standorte"
+MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="DD GMaps Locations Komponente erforderlich. Damit können alle Standorte aus der Komponente zusammen mit dem einzelnen Standort geladen werden."
+MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Nur erweiterung Standorte"
+MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Zeigen Sie nur die Komponentenstandorte ohne den einzelnen Standort aus diesem Modul und ohne den einzelnen Standort PopUp (Info-Fenster)."
+
 MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Ihr Standort"
 MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Breitengrad"
 MOD_DD_GMAPS_MODULE_YOUR_LONGITUDE="Längengrad"
