--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -19,7 +19,7 @@ MOD_DD_GMAPS_MODULE_FULLSIZE="Fullsize Map"
 MOD_DD_GMAPS_MODULE_FULLSIZE_LABEL="Fullsize button"
 MOD_DD_GMAPS_MODULE_FULLSIZE_DESC="This displays a full size map toggele button"
 
-MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default address"
+MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_LABEL="Default Address"
 MOD_DD_GMAPS_MODULE_DEFAULT_ADDRESS_DESC="The default address of the map when displaying as standalone module. This is also required if you would like to set a default position e.g. for DD Gmaps Locations. To geocode the coordinates, save the address."
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_LABEL="Set as default position"
 MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_DESC="The detault position of the map"
@@ -61,6 +61,14 @@ MOD_DD_GMAPS_MODULE_MARKER_IMAGE_LABEL="Marker image"
 MOD_DD_GMAPS_MODULE_MARKER_IMAGE_DESC="Marker image (max. size 50px to 50px)"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_LABEL="Cluster marker image"
 MOD_DD_GMAPS_MODULE_CLUSTERMARKER_IMAGE_DESC="Cluster marker image (max. size 55px to 55px)"
+
+MOD_DD_GMAPS_MODULE_ADDONFEATURES_LABEL="Addon Features"
+MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Extend extension. This requires the DD GMaps Locations component."
+MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Addon-Features for DD GMaps Location</b>:"
+MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Extend locations"
+MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="Requires DD_MapsLocations componente. This allows to load all locations from the component together with the single location."
+MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Only extended locations"
+MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Show only the component locations withou the single location from this module and without the single location PopUp (Info windows)"
 
 MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Your location"
 MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Latitude"
