Spelling mistakes fixed

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -37,12 +37,12 @@ MOD_DD_GMAPS_MODULE_COUNTRY_DESC="Eine Land für den Standorteintrag. Hinweis, f
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_LABEL="Bundesland"
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_DESC="Eine Bundesland für den Standorteintrag"
 
-MOD_DD_GMAPS_MODULE_LATITUDE_LABEL="Breiteengrad"
+MOD_DD_GMAPS_MODULE_LATITUDE_LABEL="Breitengrad"
 MOD_DD_GMAPS_MODULE_LATITUDE_DESC="Die Koordinaten (Breitengrad) für die GeoCoding Google API, wird nach dem Speichern befüllt. Koordinaten können nicht bearbeitet werden."
 MOD_DD_GMAPS_MODULE_LONGITUDE_LABEL="Längengrad"
 MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Die Koordinaten (Längengrad) für die GeoCoding Google API, wird nach dem Speichern befüllt. Koordinaten können nicht bearbeitet werden."
 
-MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
+MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Karte wird geladen ..."
 
 MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="Das System-Plugin (DD GMaps Locations GeoCode) muss für die Geokodierung aktiviert sein!"
 
@@ -67,7 +67,7 @@ MOD_DD_GMAPS_MODULE_ADDONFEATURES_DESC="Erweiterte Erweiterung. DD GMaps Locatio
 MOD_DD_GMAPS_MODULE_ADDON_DDGMAPS_LOCATIONS="<b><hr>Addon Funktionen für DD GMaps Location</b>:"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_LABEL="Erweiterte Standorte"
 MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="DD GMaps Locations Komponente erforderlich. Damit können alle Standorte aus der Komponente zusammen mit dem einzelnen Standort geladen werden."
-MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Nur erweiterung Standorte"
+MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Nur erweiterte Standorte"
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Zeigen Sie nur die Komponentenstandorte ohne den einzelnen Standort aus diesem Modul und ohne den einzelnen Standort PopUp (Info-Fenster)."
 
 MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Ihr Standort"
@@ -182,7 +182,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COOKISLANDS="Cookinseln"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CK="CK"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COSTARICA="Costa Rica"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CR="CR"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CTEDIVOIRE="CÃ" te D'Ivoire "
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CTEDIVOIRE="CÃ_QQ_ te D'Ivoire"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CI="CI"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CROATIA="Kroatien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_HR="HR"
