Translete some missing strings

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -26,14 +26,14 @@ MOD_DD_GMAPS_MODULE_SET_AS_DEFAULT_POSITION_DESC="Die Standardposition der Karte
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_LABEL="Standort name"
 MOD_DD_GMAPS_MODULE_LOCATION_NAME_DESC="Der Name für den Standort."
 MOD_DD_GMAPS_MODULE_STREET_LABEL="Straße"
-MOD_DD_GMAPS_MODULE_STREET_DESC="Eine Straße und Hausnummer für den Standorteintrag. Hinweis, für die Geocodierung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
+MOD_DD_GMAPS_MODULE_STREET_DESC="Eine Straße und Hausnummer für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
 MOD_DD_GMAPS_MODULE_LOCATION_LABEL="Ort"
-MOD_DD_GMAPS_MODULE_LOCATION_DESC="Ein Ort für den Standorteintrag. Hinweis, für die Geocodierung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
+MOD_DD_GMAPS_MODULE_LOCATION_DESC="Ein Ort für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
 MOD_DD_GMAPS_MODULE_ZIP_LABEL="PLZ"
-MOD_DD_GMAPS_MODULE_ZIP_DESC="Eine PLZ für den Standorteintrag. Hinweis, für die Geocodierung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
+MOD_DD_GMAPS_MODULE_ZIP_DESC="Eine PLZ für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
 MOD_DD_GMAPS_MODULE_COUNTRY_SELECT="- Land auswählen -"
 MOD_DD_GMAPS_MODULE_COUNTRY_LABEL="Land"
-MOD_DD_GMAPS_MODULE_COUNTRY_DESC="Eine Land für den Standorteintrag. Hinweis, für die Geocodierung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
+MOD_DD_GMAPS_MODULE_COUNTRY_DESC="Eine Land für den Standorteintrag. Hinweis, für die Standortbestimmung erforderlich, um Marker auf der Karte des Kartenmoduls zu platzieren."
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_LABEL="Bundesland"
 MOD_DD_GMAPS_MODULE_FEDERALSTATE_DESC="Eine Bundesland für den Standorteintrag"
 
