--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -74,6 +74,8 @@ MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Ihr Standort"
 MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Breitengrad"
 MOD_DD_GMAPS_MODULE_YOUR_LONGITUDE="Längengrad"
 
+MOD_DD_GMAPS_MODULE_WARNUNG_MODUL_EXISTS_ALREADY="DD GMaps Modul existiert bereits auf dieser Seite. Karte kann nur einmal für jede Seite geladen werden. Bitte überprüfen Sie die Modulzuordnung."
+
 ; @copyright (C) 2017 Florian Häusler Country Name Translation (extended selection)
 ; @copyright (C) 2015 Rainer Schlötterer Country Name Translation (reduced selection)
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_AFGHANISTAN="Afghanistan"
