--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -70,6 +70,8 @@ MOD_DD_GMAPS_MODULE_EXTENDED_LOCATION_DESC="Requires DD_MapsLocations componente
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_LABEL="Only extended locations"
 MOD_DD_GMAPS_MODULE_ONLY_EXTENDED_LOCATIONS_DESC="Show only the component locations withou the single location from this module and without the single location PopUp (Info windows)"
 
+MOD_DD_GMAPS_MODULE_WARNUNG_MODUL_EXISTS_ALREADY="DD GMaps Module already exists on this page. Map module can only be loaded once for each page. Please check the module assignment."
+
 MOD_DD_GMAPS_MODULE_YOUR_LOCATION="Your location"
 MOD_DD_GMAPS_MODULE_YOUR_LATITUDE="Latitude"
 MOD_DD_GMAPS_MODULE_YOUR_LONGITUDE="Longitude"
