--- a/language/en-GB/en-GB.mod_dd_gmaps_module.ini
+++ b/language/en-GB/en-GB.mod_dd_gmaps_module.ini
@@ -44,7 +44,7 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="The coordinates (longitude) from geocoding G
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Map is loading..."
 
-MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="The system plugin (DD GMaps Locations GeoCode) must be enabled for geo coding!"
+MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="The system plugin (DD GMaps Locations GeoCode) must be installed and enabled for geo coding!"
 
 MOD_DD_GMAPS_MODULE_API_SETTINGS_LABEL="Google API Settings"
 MOD_DD_GMAPS_MODULE_API_SETTINGS_DESC="Please enter your Google API Keys https://console.developers.google.com/apis/library"
