--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -44,7 +44,7 @@ MOD_DD_GMAPS_MODULE_LONGITUDE_DESC="Die Koordinaten (Längengrad) für die GeoCo
 
 MOD_DD_GMAPS_MODULE_MAPS_PRELOADER="Karte wird geladen ..."
 
-MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="Das System-Plugin (DD GMaps Locations GeoCode) muss für die Geokodierung aktiviert sein!"
+MOD_DD_GMAPS_MODULE_WARNING_GEOCODE_PLUGIN_MUST_BE_ENABLED="Das System-Plugin (DD GMaps Locations GeoCode) muss für die Geokodierung installiert und aktiviert sein!"
 
 MOD_DD_GMAPS_MODULE_API_SETTINGS_LABEL="Google API Einstellungen"
 MOD_DD_GMAPS_MODULE_API_SETTINGS_DESC="Bitte geben Sie Ihre Google API Keys (Schlüssel) ein https://console.developers.google.com/apis/library"
