fixed, wrong word.

--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -9,7 +9,7 @@ MOD_DD_GMAPS_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zur anzeige einer Google 
 
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_LABEL="Zoom-Ebene"
 MOD_DD_GMAPS_MODULE_ZOOMLEVEL_DESC="Die Zoom-Ebene der Karte. Ein Bereich zwischen 1 und 10."
-MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Kraftgröße erzwingen"
+MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_LABEL="Kartengröße erzwingen"
 MOD_DD_GMAPS_MODULE_FORCE_MAP_SIZE_DESC="Wenn die Größe nicht zum Modul passt, kann dies hier erzwungen werden."
 MOD_DD_GMAPS_MODULE_WIDTH_LABEL="Breite erzwingen"
 MOD_DD_GMAPS_MODULE_WIDTH_DESC="Die Breite der Karte in px. z.B. "_QQ_" 400 "_QQ_". Bitte ohne px eingeben!"
