--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -181,7 +181,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COMOROS="Komoren"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_KM="KM"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CONGO="Kongo"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CG="CG"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CONGOTHEDEMOCRATICREPUBLICOFTHE="Kongo, die Demokratische Republik der"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CONGOTHEDEMOCRATICREPUBLICOFTHE="Demokratische Republik Kongo"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CD="CD"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COOKISLANDS="Cookinseln"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CK="CK"
