--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -187,7 +187,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COOKISLANDS="Cookinseln"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CK="CK"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_COSTARICA="Costa Rica"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CR="CR"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CTEDIVOIRE="CÃ_QQ_ te D'Ivoire"
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CTEDIVOIRE="Cote d'lvoire"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_CI="CI"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_CROATIA="Kroatien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_HR="HR"
