--- a/language/de-DE/de-DE.mod_dd_gmaps_module.ini
+++ b/language/de-DE/de-DE.mod_dd_gmaps_module.ini
@@ -299,7 +299,7 @@ MOD_DD_GMAPS_MODULE_COUNTRY_NAME_ITALY="Italien"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_IT="IT"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_JAMAICA="Jamaika"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_JM="JM"
-MOD_DD_GMAPS_MODULE_COUNTRY_NAME_JAPAN = Japan
+MOD_DD_GMAPS_MODULE_COUNTRY_NAME_JAPAN ="Japan"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_JP="JP"
 MOD_DD_GMAPS_MODULE_COUNTRY_NAME_JERSEY="Jersey"
 MOD_DD_GMAPS_MODULE_COUNTRY_CODE_JE="JE"
